--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!--
+Project: pwa-barcode-app
+File structure (serve over HTTP):
+  /pwa-barcode-app
+  ├─ index.html           # main PWA UI
+  ├─ manifest.json        # PWA manifest (see below)
+  ├─ service-worker.js    # service worker (see below)
+  └─ assets/
+     ├─ icon-192.png      # PWA icon
+     └─ icon-512.png      # PWA icon
+-->
+
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,39 +19,101 @@
   <title>PWA Barcode App</title>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#3367D6">
-  <!-- Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
-  <script src="https://unpkg.com/quagga@0.12.1/dist/quagga.min.js"></script>
   <style>
     body { font-family: sans-serif; padding: 1rem; max-width: 400px; margin: auto; }
     h1 { font-size: 1.5rem; margin-bottom: .5rem; }
     label { display: block; font-weight: bold; margin-top: .75rem; }
     input, select, button { width: 100%; padding: .5rem; margin: .25rem 0; }
-    small { display: block; color: #555; margin-bottom: .5rem; }
     svg { width: 100%; height: auto; border: 1px solid #ccc; margin-top: .5rem; }
-    #barcode-text { text-align: center; font-weight: bold; margin-top: .25rem; }
+    #barcode-info { margin-top: .5rem; font-size: 0.9rem; line-height: 1.4; }
+    #barcode-info p { margin: 0.25rem 0; }
   </style>
 </head>
 <body>
-  <h1>Scan • Generate • Print</h1>
-  <label for="tNumber">T-Number (numeric part only):</label>
-  <input id="tNumber" type="text" placeholder="Enter digits, e.g., 12345">
-  <button id="start-scan">📷 Scan T-Number</button>
+  <h1>Generate for CIJ Printer</h1>
+
+  <label for="tNumber">T-Number:</label>
+  <input id="tNumber" type="text" placeholder="Enter full T-Number, e.g., T12345">
+
   <label for="company">Company:</label>
   <select id="company">
     <option value="">Select Company…</option>
-    <option>AcmeCo</option>
-    <option>BetaCorp</option>
-    <option>GammaInc</option>
+    <option value="01">AE SERVICES (01)</option>
+    <option value="02">AMERICAN PIPELINERS (02)</option>
+    <option value="03">BLD SERVICES (03)</option>
+    <option value="04">CAPITAL SEWER SERVICES (04)</option>
+    <option value="05">CGI ENVIRONNEMENT (05)</option>
+    <option value="06">CHARLES MACHINE WORKS (NON-POTABLE WATER) (06)</option>
+    <option value="07">CHARLES MACHINE WORKS (POTABLE WATER) (07)</option>
+    <option value="08">CHICAGOLAND TRENCHLESS (08)</option>
+    <option value="09">CIPP CHILE (09)</option>
+    <option value="10">CIR INGENIERIA (10)</option>
+    <option value="11">CLEAN WATER WORKS (11)</option>
+    <option value="12">COLUMBIA PUMPING & CONSTRUCTION (12)</option>
+    <option value="13">CORBY ENERGY SERVICES (13)</option>
+    <option value="14">DVM UTILITIES (14)</option>
+    <option value="15">FORACTION (15)</option>
+    <option value="16">FORMADRAIN (16)</option>
+    <option value="17">FRAWNER CORP (17)</option>
+    <option value="18">GENESEE VALLEY CONSTRUCTION (18)</option>
+    <option value="19">GREEN MOUNTAIN PIPELINE (19)</option>
+    <option value="20">GULF COAST UNDERGROUND (20)</option>
+    <option value="21">HAMMERHEAD TRENCHLESS (21)</option>
+    <option value="22">HOERR CONSTRUCTION (22)</option>
+    <option value="23">HYDRO-KLEAN (23)</option>
+    <option value="24">INBODE (24)</option>
+    <option value="25">INFRAHYDRO (25)</option>
+    <option value="26">INLINER SOLUTIONS (26)</option>
+    <option value="27">INSIGHT PIPE (27)</option>
+    <option value="28">JET JACK (28)</option>
+    <option value="29">JRG MATERIALS LLC (29)</option>
+    <option value="30">LANZO TRENCHLESS TECHNOLOGIES (30)</option>
+    <option value="31">LEAK ELIMINATORS (31)</option>
+    <option value="32">LINER PRODUCTS (32)</option>
+    <option value="33">MARTECH (33)</option>
+    <option value="34">MASTERLINER INC. (34)</option>
+    <option value="35">MAXLINER (35)</option>
+    <option value="36">MICHELS EAST (36)</option>
+    <option value="37">MICHELS TRENCHLESS - BROWNSVILLE (37)</option>
+    <option value="38">MICHELS TRENCHLESS - HAWAII (38)</option>
+    <option value="39">MICHELS TRENCHLESS - SALEM (39)</option>
+    <option value="40">MIN CHEM CANADA (40)</option>
+    <option value="41">MINNEAPOLIS SEWER DEPARTMENT (41)</option>
+    <option value="42">MUNICIPAL PIPE TOOL (42)</option>
+    <option value="43">NATIONAL WATER MAIN CLEANING CO (43)</option>
+    <option value="44">PERFORMANCE PIPELINING (44)</option>
+    <option value="45">PIPENOLOGY - OFALLON (45)</option>
+    <option value="46">PIPENOLOGY - ROCKLIN (46)</option>
+    <option value="47">QUADEX (47)</option>
+    <option value="48">SANCON TECHNOLOGIES (48)</option>
+    <option value="49">SANI-WAY (49)</option>
+    <option value="50">SERVICES INFRASPEC (50)</option>
+    <option value="51">SEWER TECHNOLOGIES (51)</option>
+    <option value="52">SKANEX PIPE SERVICES (52)</option>
+    <option value="53">SOUTHWEST PIPE (53)</option>
+    <option value="54">SPINIELLO (54)</option>
+    <option value="55">SUNCOAST INFRASTRUCTURE (55)</option>
+    <option value="56">TEMPLE & TEMPLE (56)</option>
+    <option value="57">TERRA ENGINEERING AND CONSTRUCTION (57)</option>
+    <option value="58">TRI STATE UTILITIES (58)</option>
+    <option value="59">UNITED SURVEY (59)</option>
+    <option value="60">UNITED WETOUT (60)</option>
+    <option value="61">UNITED WETOUT HIDALGO (61)</option>
+    <option value="62">UPSTATE TRENCHLESS (62)</option>
+    <option value="63">VEIT COMPANIES (63)</option>
+    <option value="64">VISU SEWER (64)</option>
+    <option value="65">W. E. RAWSON (65)</option>
   </select>
-  <small>Selects the company-specific label template on the printer.</small>
+
   <label for="counter">Step Counter:</label>
   <select id="counter">
     <option value="">Select step…</option>
     <option value="1">1</option>
     <option value="5">5</option>
   </select>
-  <small>Select the incremental step (always starts at 0): e.g., choosing 5 yields 0, 5, 10, 15, ...</small>
+  <small>Starts at 0 and steps by the selected value for CIJ pulse configuration.</small>
+
   <label for="unit">Unit:</label>
   <select id="unit">
     <option value="">Select unit…</option>
@@ -46,52 +121,29 @@
     <option value="m">m (meters)</option>
     <option value="yd">yd (yards)</option>
   </select>
-  <small>Defines the measurement unit for internal pulse configuration.</small>
-  <label><input id="show-unit" type="checkbox"> Show unit on printed label</label>
-  <small>Check to include unit text on the printed label.</small>
-  <button id="generate">🔖 Generate Barcode</button>
-  <div>
-    <svg id="barcode"></svg>
-    <div id="barcode-text"></div>
-  </div>
+  <small>Defines the CIJ printer's pulse unit (not printed unless enabled).</small>
+
+  <label><input id="show-unit" type="checkbox"> Show unit in scanned payload</label>
+
+  <button id="generate">Generate for CIJ</button>
+  <svg id="barcode"></svg>
+  <div id="barcode-info"></div>
+
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const templateMap = { AcmeCo: '01', BetaCorp: '02', GammaInc: '03' };
-      const inputT = document.getElementById('tNumber');
-      const btnScan = document.getElementById('start-scan');
-      const selectCompany = document.getElementById('company');
-      const selectCounter = document.getElementById('counter');
-      const selectUnit = document.getElementById('unit');
-      const showUnit = document.getElementById('show-unit');
-      const btnGenerate = document.getElementById('generate');
-      const svgEl = document.getElementById('barcode');
-      const textEl = document.getElementById('barcode-text');
-      btnScan.addEventListener('click', () => {
-        Quagga.init({
-          inputStream: { type: 'LiveStream', constraints: { facingMode: 'environment' } },
-          decoder: { readers: ['code_128_reader'] }
-        }, err => { if (err) { alert('Scanner init failed'); return; } Quagga.start(); });
-        Quagga.onDetected(data => { inputT.value = data.codeResult.code.replace(/^T/, ''); Quagga.stop(); });
-      });
-      btnGenerate.addEventListener('click', () => {
-        let raw = inputT.value.trim();
-        if (!/^[0-9]+$/.test(raw)) { alert('Enter only digits for T-Number'); return; }
-        const tNum = 'T' + raw;
-        const company = selectCompany.value;
-        const step = selectCounter.value;
-        const unit = selectUnit.value;
-        if (!company || !step || !unit) { alert('Please complete all fields'); return; }
-        const tplId = templateMap[company]; if (!tplId) { alert('No template for ' + company); return; }
-        const counterSegment = showUnit.checked ? `${step}${unit}` : `${step}`;
-        const payload = `${tNum}|${tplId}|${counterSegment}`;
-        try {
-          JsBarcode(svgEl, payload, { format: 'CODE128', displayValue: false, height: 60, margin: 10 });
-          textEl.textContent = tNum + (showUnit.checked ? ' ' + unit : '');
-        } catch (e) {
-          alert('Barcode generation error'); console.error(e);
-        }
-      });
-      if ('serviceWorker' in navigator) { navigator.serviceWorker.register('service-worker.js'); }
+    document.getElementById('generate').addEventListener('click', function() {
+      var tNumber = document.getElementById('tNumber').value;
+      var companySegment = document.getElementById('company').value;
+      var counter = document.getElementById('counter').value;
+      var unit = document.getElementById('unit').value;
+      var showUnit = document.getElementById('show-unit').checked;
+      var counterSegment = showUnit ? counter + unit : counter;
+      // Only include segment numbers in payload: T-Number|companySegment|counterSegment
+      var payload = tNumber + '|' + companySegment + '|' + counterSegment;
+      JsBarcode('#barcode', payload, { format: 'CODE128', displayValue: false, height: 60, margin: 10 });
+      document.getElementById('barcode-info').innerHTML =
+        '<p><strong>T-Number:</strong> ' + tNumber + '</p>' +
+        '<p><strong>Company Segment:</strong> ' + companySegment + '</p>' +
+        '<p><strong>Counter:</strong> ' + counterSegment + '</p>';
     });
   </script>
 </body>
