--- a/index.html
+++ b/index.html
@@ -16,28 +16,83 @@ File structure (serve over HTTP):
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PWA Barcode App</title>
+  <title>Scan to Print App</title>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#3367D6">
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 1rem; max-width: 400px; margin: auto; }
-    h1 { font-size: 1.5rem; margin-bottom: .5rem; }
-    label { display: block; font-weight: bold; margin-top: .75rem; }
-    input, select, button { width: 100%; padding: .5rem; margin: .25rem 0; }
-    svg { width: 100%; height: auto; border: 1px solid #ccc; margin-top: .5rem; }
-    #barcode-info { margin-top: .5rem; font-size: 0.9rem; line-height: 1.4; }
-    #barcode-info p { margin: 0.25rem 0; }
+    body {
+      font-family: sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 1rem;
+      max-width: 400px;
+      margin: 2rem auto;
+    }
+    h1 {
+      color: #007bff;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    label {
+      display: block;
+      color: #555;
+      font-weight: bold;
+      margin-top: 1rem;
+    }
+    input, select, button {
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    button {
+      background: #007bff;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+    svg {
+      width: 100%;
+      height: auto;
+      margin-top: 1rem;
+      background: #fff;
+    }
+    #barcode-info {
+      margin-top: 1rem;
+      background: #f0f0f0;
+      padding: 0.75rem;
+      border-radius: 4px;
+      font-size: 0.9rem;
+    }
+    #barcode-info p {
+      margin: 0.25rem 0;
+    }
   </style>
 </head>
 <body>
-  <h1>Generate for CIJ Printer</h1>
+  <div class="container">
+    <img src="assets/UF_Logo_UF_Vertical_Vortex_FullColor.webp" alt="Logo" style="display:block; margin:0 auto 1rem; max-width:150px;">
+
+  <h1>Scan to Print</h1>
 
   <label for="tNumber">T-Number:</label>
   <input id="tNumber" type="text" placeholder="Enter full T-Number, e.g., T12345">
 
   <label for="company">Company:</label>
-  <select id="company">
+  <select id="company"> id="company">
     <option value="">Select Company…</option>
     <option value="01">AE SERVICES (01)</option>
     <option value="02">AMERICAN PIPELINERS (02)</option>
@@ -123,7 +178,10 @@ File structure (serve over HTTP):
   </select>
   <small>Defines the CIJ printer's pulse unit (not printed unless enabled).</small>
 
-  <label><input id="show-unit" type="checkbox"> Show unit in scanned payload</label>
+  <label style="display: inline-flex; align-items: center;">
+    <span>Show FT, M, or Yards after counter</span>
+    <input id="show-unit" type="checkbox" style="margin-left: 0.5rem;">
+  </label>
 
   <button id="generate">Generate for CIJ</button>
   <svg id="barcode"></svg>
@@ -137,7 +195,6 @@ File structure (serve over HTTP):
       var unit = document.getElementById('unit').value;
       var showUnit = document.getElementById('show-unit').checked;
       var counterSegment = showUnit ? counter + unit : counter;
-      // Only include segment numbers in payload: T-Number|companySegment|counterSegment
       var payload = tNumber + '|' + companySegment + '|' + counterSegment;
       JsBarcode('#barcode', payload, { format: 'CODE128', displayValue: false, height: 60, margin: 10 });
       document.getElementById('barcode-info').innerHTML =
