--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ File structure (serve over HTTP):
     <label for="tNumber">T-Number:</label>
     <input id="tNumber" type="text" placeholder="Enter full T-Number, e.g., T12345">
 
-    <label for="company">Company:</label>
+    <label for="company">Customer:</label>
     <select id="company">
-      <option value="">Select Company…</option>
+      <option value="">Select Customer…</option>
       <option value="01">AE SERVICES (01)</option>
       <option value="02">AMERICAN PIPELINERS (02)</option>
       <option value="03">BLD SERVICES (03)</option>
