--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <!--
-Project: pwa-barcode-app
-File structure (serve over HTTP):
-  /pwa-barcode-app
-  ├─ index.html           # main PWA UI (CIJ printer barcode generator)
-  ├─ manifest.json        # PWA manifest
-  ├─ service-worker.js    # service worker
-  └─ assets/
-     ├─ icon-192.png      # App icons & logo
-     └─ UF_Logo_UF_Vertical_Vortex_FullColor.webp
+Project: scan-to-print-pwa
+Feature: Remove inline log display from index.html
 -->
-
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,36 +12,43 @@ File structure (serve over HTTP):
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-title" content="Scan to Print" />
-  <link rel="icon" href="assets/icon-192.png" />
-  <link rel="apple-touch-icon" href="assets/icon-192.png" />
+  <!-- App Icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icon-152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon-180.png" />
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#3367D6" />
   <!-- JsBarcode Library -->
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
   <style>
-    /* Global */
     *, *::before, *::after { box-sizing: border-box; }
-    body { font-family: sans-serif; background:#f5f5f5; color:#333; margin:0; padding:0; }
-    .container { background:#fff; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.1); padding:1rem; max-width:400px; margin:2rem auto; }
-    h1 { color:#007bff; text-align:center; margin-bottom:1rem; }
-    label { display:block; color:#555; font-weight:bold; margin-top:1rem; }
-    input, select, button { width:100%; padding:.75rem; margin:.5rem 0; border:1px solid #ccc; border-radius:4px; font-size:1rem; }
-    button { background:#007bff; color:#fff; border:none; cursor:pointer; }
-    button:hover { background:#0056b3; }
-    svg { width:100%; height:auto; margin-top:1rem; background:#fff; }
-    #barcode-info { margin-top:1rem; background:#f0f0f0; padding:.75rem; border-radius:4px; font-size:.9rem; }
-    #barcode-info p { margin:.25rem 0; }
-    .inline-checkbox { display:flex; align-items:center; white-space:nowrap; margin:.5rem 0; }
-    .inline-checkbox span { margin-right:.5rem; }
+    body { font: 16px sans-serif; background: #f5f5f5; margin: 0; padding: 0; }
+    .container { background: #fff; max-width: 400px; margin: 2rem auto; padding: 1rem; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+    h1 { color: #007bff; text-align: center; margin-bottom: 1rem; }
+    label { display: block; margin: 1rem 0 .25rem; color: #555; font-weight: bold; }
+    input, select, button { width: 100%; padding: .75rem; margin-bottom: .5rem; border: 1px solid #ccc; border-radius: 4px; }
+    .inline { display: flex; align-items: center; white-space: nowrap; margin: .5rem 0; }
+    .inline span { flex: 1; }
+    button { background: #007bff; color: #fff; border: none; cursor: pointer; }
+    button:hover { background: #0056b3; }
+    svg { width: 100%; height: auto; margin-top: 1rem; background: #fff; }
+    #barcode-info { margin-top: 1rem; padding: .75rem; background: #f0f0f0; border-radius: 4px; font-size: .9rem; }
+    #barcode-info p { margin: .25rem 0; }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="assets/UF_Logo_UF_Vertical_Vortex_FullColor.webp" alt="Logo" style="display:block;margin:0 auto 1rem;max-width:150px;" />
-    <h1>Scan to Print</h1>
+        <a href="log.html" style="display:block; text-align:right; color:#007bff; text-decoration:none; margin-bottom:.5rem;">Log Panel</a>
+    <h1>Scan to Print</h1>Scan to Print</h1>
+
+    <label for="mode">Mode:</label>
+    <select id="mode">
+      <option value="barcode">Generate Barcode</option>
+      <option value="tcp">Send via TCP</option>
+    </select>
 
     <label for="tNumber">T-Number:</label>
-    <input id="tNumber" type="text" placeholder="Enter full T-Number, e.g., T12345" />
+    <input id="tNumber" type="text" placeholder="T12345" />
 
     <label for="company">Customer:</label>
     <select id="company">
@@ -132,35 +130,56 @@ File structure (serve over HTTP):
     <label for="unit">Unit:</label>
     <select id="unit">
       <option value="">Select unit…</option>
-      <option value="ft">ft (feet)</option>
-      <option value="m">m (meters)</option>
-      <option value="yd">yd (yards)</option>
+      <option value="ft">ft</option>
+      <option value="m">m</option>
+      <option value="yd">yd</option>
     </select>
 
-    <label class="inline-checkbox">
-      <span>Show FT, M, or Yards after counter</span>
-      <input id="show-unit" type="checkbox">
-    </label>
+    <div class="inline">
+      <span>Show unit after counter</span>
+      <input id="show-unit" type="checkbox" />
+    </div>
 
-    <button id="generate">Generate for CIJ</button>
+    <label for="printerIp">Printer IP:</label>
+    <input id="printerIp" type="text" placeholder="192.168.1.100" />
+
+    <label for="printerPort">Printer Port:</label>
+    <input id="printerPort" type="text" placeholder="9100" />
+
+    <button id="execute">Execute</button>
     <svg id="barcode"></svg>
     <div id="barcode-info"></div>
   </div>
 
   <script>
-    document.getElementById('generate').addEventListener('click', function() {
-      var tNumber = document.getElementById('tNumber').value;
+    function addLog(message) {
+      var logEntry = new Date().toLocaleString() + ' - ' + message;
+      var logs = JSON.parse(localStorage.getItem('logs')||'[]');
+      logs.push(logEntry);
+      localStorage.setItem('logs', JSON.stringify(logs));
+    }
+
+    document.getElementById('execute').addEventListener('click', function() {
+      var mode = document.getElementById('mode').value;
+      var tNumber = document.getElementById('tNumber').value.trim();
       var companySegment = document.getElementById('company').value;
       var counter = document.getElementById('counter').value;
       var unit = document.getElementById('unit').value;
       var showUnit = document.getElementById('show-unit').checked;
-      var counterSegment = showUnit ? counter + unit : counter;
-      var payload = tNumber + '|' + companySegment + '|' + counterSegment;
-      JsBarcode('#barcode', payload, { format: 'CODE128', displayValue: false, height: 60, margin: 10 });
-      document.getElementById('barcode-info').innerHTML =
-        '<p><strong>T-Number:</strong> ' + tNumber + '</p>' +
-        '<p><strong>Company Segment:</strong> ' + companySegment + '</p>' +
-        '<p><strong>Counter:</strong> ' + counterSegment + '</p>';
+      var payload = tNumber + '|' + companySegment + '|' + (showUnit?counter+unit:counter);
+
+      if(mode==='barcode'){
+        JsBarcode('#barcode',payload,{format:'CODE128',displayValue:false,height:60,margin:10});
+        document.getElementById('barcode-info').textContent='Payload: '+payload;
+        addLog('Generated barcode: '+payload);
+      } else {
+        var ip=document.getElementById('printerIp').value.trim();
+        var port=document.getElementById('printerPort').value.trim();
+        if(!tNumber||!companySegment||!counter||!unit||!ip||!port){alert('Complete all fields');return;}
+        fetch('http://'+ip+':'+port,{method:'POST',headers:{'Content-Type':'text/plain'},body:payload+'\r\n'})
+          .then(function(res){if(!res.ok)throw new Error('Printer error:'+res.status);addLog('Sent to printer '+ip+':'+port+' payload:'+payload);alert('Sent to printer!');})
+          .catch(function(err){addLog('Error sending to printer:'+err);alert('Failed to send to printer');});
+      }
     });
   </script>
 </body>
